--- a/thomasdevri_es/staff/templates/staff/dashboard.html
+++ b/thomasdevri_es/staff/templates/staff/dashboard.html
@@ -4,8 +4,25 @@
 
 {% block content %}
 
+<br />
+<br />
+<br />
 
-  <h1>Staff Dashboard</h1>
+<h1 class="dashb__header">Staff Dashboard</h1>
 
+<br />
+<br />
+<br />
+
+<h1 class="dashb__cta">
+  <img
+    height="100px"
+    style="border-radius: 10px; display: inline;"
+   src="https://thomas-christmas.s3.us-east-2.amazonaws.com/giphy.gif" />
+  Top Secret Custom TCP Protocols
+  <img
+    height="100px"
+    style="border-radius: 10px; display: inline;"
+   src="https://thomas-christmas.s3.us-east-2.amazonaws.com/giphy.gif" />
 
 {% endblock %}
