staff login required

--- a/thomasdevri_es/staff/templates/staff/dashboard.html
+++ b/thomasdevri_es/staff/templates/staff/dashboard.html
@@ -14,15 +14,18 @@
 <br />
 <br />
 
-<h1 class="dashb__cta">
-  <img
-    height="100px"
-    style="border-radius: 10px; display: inline;"
-   src="https://thomas-christmas.s3.us-east-2.amazonaws.com/giphy.gif" />
-  Top Secret Custom TCP Protocols
-  <img
-    height="100px"
-    style="border-radius: 10px; display: inline;"
-   src="https://thomas-christmas.s3.us-east-2.amazonaws.com/giphy.gif" />
+<a href="{% url 'doclist' %}">
+  <h1 class="dashb__cta">
+    <img
+      height="100px"
+      style="border-radius: 10px; display: inline;"
+     src="https://thomas-christmas.s3.us-east-2.amazonaws.com/giphy.gif" />
+    Top Secret Custom TCP Protocols
+    <img
+      height="100px"
+      style="border-radius: 10px; display: inline;"
+     src="https://thomas-christmas.s3.us-east-2.amazonaws.com/giphy.gif" />
+  </h1>
+</a>
 
 {% endblock %}
