--- a/thomasdevri_es/staff/templates/staff/docs/base.html
+++ b/thomasdevri_es/staff/templates/staff/docs/base.html
@@ -4,10 +4,14 @@
 
 
 <main>
-  <div>
-    <h1>Documentation Page</h1>
-  </div>
+  <div class="docpage__base">
+    <a href="{% url 'dashboard' %}">
+      <button class="docpage__base__button">Return to Dashboard</button>
+    </a>
+    </div>
+  {% block doc %} {% endblock %}
 </main>
 
 
 {% endblock %}
+
